syntax = "proto3";

package resources.mailer;

import "buf/validate/validate.proto";
import "resources/qualifications/qualifications.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/mailer;mailer";

enum AccessLevel {
  ACCESS_LEVEL_UNSPECIFIED = 0;
  ACCESS_LEVEL_BLOCKED = 1;
  ACCESS_LEVEL_READ = 2;
  ACCESS_LEVEL_WRITE = 3;
  ACCESS_LEVEL_MANAGE = 4;
}

message Access {
  repeated JobAccess jobs = 1 [
    (buf.validate.field).repeated.max_items = 20,
    (tagger.tags) = "alias:\"job_access\""
  ];
  repeated UserAccess users = 2 [
    (buf.validate.field).repeated.max_items = 20,
    (tagger.tags) = "alias:\"user_access\""
  ];
  repeated QualificationAccess qualifications = 3 [
    (buf.validate.field).repeated.max_items = 20,
    (tagger.tags) = "alias:\"qualification_access\""
  ];
}

message JobAccess {
  int64 id = 1 [(tagger.tags) = "sql:\"primary_key\" alias:\"id\""];
  optional resources.timestamp.Timestamp created_at = 2;
  int64 target_id = 3;
  string job = 4 [(buf.validate.field).string.max_len = 20];
  optional string job_label = 5 [(buf.validate.field).string.max_len = 50];
  int32 minimum_grade = 6 [(buf.validate.field).int32.gte = 0];
  optional string job_grade_label = 7 [(buf.validate.field).string.max_len = 50];
  AccessLevel access = 8 [(buf.validate.field).enum.defined_only = true];
}

message UserAccess {
  int64 id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  int64 target_id = 3;
  int32 user_id = 4 [(buf.validate.field).int32.gte = 0];
  optional resources.users.UserShort user = 5;
  AccessLevel access = 6 [(buf.validate.field).enum.defined_only = true];
}

message QualificationAccess {
  int64 id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  int64 target_id = 3;
  int64 qualification_id = 4;
  optional resources.qualifications.QualificationShort qualification = 5;
  AccessLevel access = 6 [(buf.validate.field).enum.defined_only = true];
}
